--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="contact.html"></a>
+    <a href="contact.html">Contact</a>
       </nav>
 
 </header>
