--- a/about.html
+++ b/about.html
@@ -65,6 +65,13 @@
          </nav>
     </header>
     <main>
+      class="container my-5">
+
+<h2>About Me</h2>
+
+<p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
+
+<p>This is my first multi-page website, and I'm excited to share it with you!</p>
       <p>Hi! I'm a beginner web developer learning how to use Github Pages.</p>
       <p>This is my first multi-page website, and I'm excited to share it with you!</p>
     </main>
