--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,11 @@
     </nav>
   </header>
   <main>
+    class="container my-5">
+
+<h2>Contact Me</h2>
+
+<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com" class="btn btn-success">example@example.com</a>.</p>
     <p>If you'd like to get in touch, feel free to email me at<a href="malito:example@example.com">example@example.com</a>.</p>
     <footer>
       <p>%copy: 2025 Your Name</p>
