--- a/index.html
+++ b/index.html
@@ -3,65 +3,40 @@
 <html lang="en">
 
 <head>
-
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>My First GitHub Page</title>
+<title> Asante's Artisan Bakery </title>
 <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
 </head>
 
 <body>
 <!-- Bootstrap JS and dependencies -->
-
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
 <div class="container">
-
 <a class="navbar-brand" href="index.html">My Website</a>
-
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-
 <span class="navbar-toggler-icon"></span>
-
 </button>
-
 <div class="collapse navbar-collapse" id="navbarNav">
-
 <ul class="navbar-nav">
-
 <li class="nav-item">
-
 <a class="nav-link" href="index.html">Home</a>
-
 </li>
-
 <li class="nav-item">
-
 <a class="nav-link" href="about.html">About</a>
-
 </li>
-
 <li class="nav-item">
-
 <a class="nav-link" href="contact.html">Contact</a>
-
 </li>
-
 </ul>
-
 </div>
-
 </div>
-
 </nav>
 <h1>Welcome to My Website!</h1>
   <nav>
