--- a/index.html
+++ b/index.html
@@ -37,14 +37,8 @@
 </ul>
 </div>
 </div>
-</nav>
-<h1>Welcome to My Website!</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-      </nav>
-
+</nav>]
+  
 </header>
 
 <main class="container my-5">
@@ -55,15 +49,6 @@
 <p>Here's a picture of a cute cat:</p>
 <img src="https://placekitten.com/200/300" alt="A cute kitten" class="img-fluid rounded">
 <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
-</div>
-<div class="col-md-4">
-<div class="card">
-<div class="card-body">
-<h5 class="card-title">Did You Know?</h5>
-<p class="card-text">GitHub Pages is a free service to host static websites directly from your GitHub repository.</p>
-</div>
-</div>
-</div>
 </div>
 </main>
 
