--- a/index.html
+++ b/index.html
@@ -19,20 +19,23 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <div class="container">
-<a class="navbar-brand" href="index.html">My Website</a>
+<a class="navbar-brand" href="index.html">Asante's Artisan Bakery</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="navbar-nav">
 <li class="nav-item">
-<a class="nav-link" href="index.html">Home</a>
+<a class="nav-link" href="index.html">Home Page</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="about.html">About</a>
+<a class="nav-link" href="about.html">About Us</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="contact.html">Contact</a>
+<a class="nav-link" href="contact.html">Contact Us</a>
+  </li>
+<li class="nav-item">
+<a class="nav-link" href="menu.html">Menu</a>
 </li>
 </ul>
 </div>
