--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
+<ul class=>"nav navbar-nav navbar-right"
 <li class="nav-item">
 <a class="nav-link" href="index.html">Home Page</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="about.html">About Us</a>
+<a class="nav-link" href="menu.html"> Menu</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="contact.html">Contact Us</a>
   </li>
 <li class="nav-item">
-<a class="nav-link" href="menu.html">Menu</a>
+<a class="nav-link" href="about.html"> About Us</a>
 </li>
 </ul>
 </div>
