--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
-<ul class=>"nav navbar-nav"
+<ul class=>"nav navbar-nav">
 <li class="nav-item">
 <a class="nav-link" href="index.html">Home Page</a>
 </li>
