--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="nav navbar-nav">
+ <ul class="navbar-nav ml-auto">
 <li class="nav-item">
 <a class="nav-link" href="index.html">Home Page</a>
 </li>
