--- a/about.html
+++ b/about.html
@@ -17,52 +17,31 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
 <div class="container">
-
 <a class="navbar-brand" href="index.html">My Website</a>
-
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-
 <span class="navbar-toggler-icon"></span>
-
 </button>
-
 <div class="collapse navbar-collapse" id="navbarNav">
-
 <ul class="navbar-nav">
-
 <li class="nav-item">
-
 <a class="nav-link" href="index.html">Home</a>
-
 </li>
-
 <li class="nav-item">
-
-<a class="nav-link" href="about.html">About</a>
-
+<a class="nav-link" href="menu.html">Menu</a>
 </li>
-
 <li class="nav-item">
-
-<a class="nav-link" href="contact.html">Contact</a>
-
+<a class="nav-link" href="about.html">About Us</a>
 </li>
-
+<li class="nav-item">
+<a class="nav-link" href="contact.html">ContactUs</a>
+</li>
 </ul>
-
 </div>
-
 </div>
-
 </nav>
       <h1>About Me</h1>
-      <nav>
-        <a href="index.html">Home</a> 
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-         </nav>
+    
     </header>
     <main>
       class="container my-5">
