--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 <header>
-<nav class="navbar navbar-expand-lg navbar-#0E1627 text-bg-#0E1627">
+<nav class="navbar navbar-expand-lg" style="background-color: #0E1627; color: #fff;">
 <div class="container">
 <a class="navbar-brand" href="index.html">Asante's Artisan Bakery</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
-<ul class="nav navbar-nav">
  <ul class="navbar-nav ml-auto">
 <li class="nav-item">
 <a class="nav-link" href="index.html">Home Page</a>
