--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 </div>
 </div>
 </nav>
-  
+  <div class="header">
+        <h1>Asante's Artisan Bakery</h1>
+        <p>Welcome to our homemade bakery, where every bite is made with love!Order your treats today.</p>
+        <button class="btn btn-warni    ng">Place or Create Order</button>
+    </div>
 </header>
 
 <main class="container my-5">
