--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 </main>
 
 <footer>
-
-<p>&copy; 2025 Your Name</p>
-
+<p> © 2025 Asante's Artisan Bakery. All right reserved.</p>
 </footer>
 
 </body>
