--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title> Asante's Artisan Bakery </title>
+<title> Artisan Cakes </title>
 <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
 </div>
 </nav>
   <div class="header">
-        <h1 class="text-center">Asante's Artisan Bakery</h1>
+        <h1 class="text-center"> Artisan Cakes</h1>
         <p>Welcome to our homemade bakery, where every bite is made with love!Order your treats today.</p>
         <button class="btn btn-warni    ng">Place or Create Order</button>
     </div>
@@ -53,14 +53,12 @@
 <div class="col-md-8">
 <h2>Welcome to My Website!</h2>
 <p>This is a simple webpage hosted on GitHub Pages.</p>
-<p>Here's a picture of a cute cat:</p>
-<img src="https://placekitten.com/200/300" alt="A cute kitten" class="img-fluid rounded">
 <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
 </div>
 </main>
 
 <footer>
-<p> © 2025 Asante's Artisan Bakery. All right reserved.</p>
+<p> © 2025 Artisan Cakes. All right reserved.</p>
 </footer>
 
 </body>
