--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
                     <li class="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="cakes.html">Our Cakes</a></li>
-                    <li><a href="classes.html">Baking Classes</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                   <li><a href="classes.html">Baking Classes</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="feedback.html"> Let Us know</a></li>
                 </ul>
             </nav>
         </div>
 
 </header>
- </section>
 
     <section id="boxes">
         <div class="container">
@@ -55,15 +54,6 @@
             </div>
         </div>
     </section>
-
-<main class="container my-5">
-<div class="row">
-<div class="col-md-8">
-<h2>Welcome to My Website!</h2>
-<p>This is a simple webpage hosted on GitHub Pages.</p>
-<p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
-</div>
-</main>
 
 <footer>
 <p> © 2025 Artisan Cakes. All right reserved.</p>
