--- a/about.html
+++ b/about.html
@@ -7,55 +7,67 @@
   <link rel="stylesheet" href="style.css">
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous"/>
+   <link rel="stylesheet" href="styles.css" />
 </head>
-  <body>
-   <!-- Bootstrap JS and dependencies -->
+<body>
+  <header class="bg-dark text-white text-center p-4 mb-4">
+    <h1 class="display-4 fw-bold">About Sweet Sensations Bakery</h1>
+    <p class="lead">A journey fueled by tradition, passion, and flavor</p>
+  </header>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <main class="container mb-5">
+    <article>
+      <div class="row g-4 align-items-center">
+        <div class="col-md-5">
+          <img
+            src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?auto=format&fit=crop&w=600&q=80"
+            alt="Baking with grandmother"
+            class="img-fluid rounded shadow-sm" />
+        </div>
+        <div class="col-md-7">
+          <h2 class="mb-3">Our Story</h2>
+          <p>
+            My baking journey began when I was just 10 years old, standing beside my grandmother in her cozy kitchen. She shared with me not just recipes, but generations of tradition, love, and secrets to creating the most delightful treats. Those early mornings filled with the aromas of fresh bread and sweet pastries sparked a passion that has only grown stronger with each passing year.
+          </p>
+          <p>
+            The recipes I cherish are time-tested treasures, handed down through my family and now reimagined with my own twist to bring both nostalgia and excitement to every plate.
+          </p>
+        </div>
+      </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> 
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<div class="container">
-<a class="navbar-brand" href="index.html">My Website</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
-<li class="nav-item">
-<a class="nav-link" href="index.html">Home</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="menu.html">Menu</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="about.html">About Us</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="contact.html">ContactUs</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-      <h1>About Me</h1>
-    
-    </header>
-    <main>
-      class="container my-5">
+      <section class="mt-5">
+        <h2>Our Passion & Drive</h2>
+        <p>
+          At Sweet Sensations, our passion for baking is fueled by a desire to create joy and connection. Baking is more than mixing ingredients — it's crafting experiences and memories. We're driven to use only the freshest, high-quality ingredients and blend tradition with creativity to make each treat a masterpiece.
+        </p>
+        <p>
+          We believe everyone deserves a taste of our heartfelt creations — whether it’s a cake for a special occasion, a comforting pastry with your morning coffee, or simply a sweet treat to brighten your day.
+        </p>
+      </section>
 
-<h2>About Me</h2>
+      <section class="mt-5">
+        <h2>What We Offer</h2>
+        <p>
+          From delicate wedding cakes to imaginative specialty cakes and joyful birthday favorites, our offerings are as diverse as the celebrations they accompany. We pour our heart and soul into each creation, ensuring bespoke flavors and beautiful designs that reflect your unique story.
+        </p>
+        <p>
+          Our commitment is to deliver sweet moments crafted with care, passion, and a touch of tradition — just like my grandmother taught me.
+        </p>
+      </section>
+    </article>
+  </main>
 
-<p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2024 Sweet Sensations Bakery. All rights reserved.</p>
+  </footer>
 
-<p>This is my first multi-page website, and I'm excited to share it with you!</p>
-      <p>Hi! I'm a beginner web developer learning how to use Github Pages.</p>
-      <p>This is my first multi-page website, and I'm excited to share it with you!</p>
-    </main>
-    <footer>
-      <p>&copy: 2023 Your Name</p>
-    </footer>
-  </body>
+  <!-- Bootstrap JS Bundle with Popper -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
+    crossorigin="anonymous"></script>
+</body>
 </html>
+
