--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="cakes.html">Our Cakes</a></li>
                    <li><a href="classes.html">Baking Classes</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="feedback.html"> Let Us know</a></li>
+                    <li><a href="feedback.html"> Feedback</a></li>
                 </ul>
             </nav>
         </div>
