--- a/cakes.html
+++ b/cakes.html
@@ -115,7 +115,7 @@
         <!-- Specialty Cakes -->
         <div class="col-md-4">
           <div class="treat-card d-flex flex-column h-100">
-            <img src="https://images.unsplash.com/photo-1542831371-d531d36971e6?auto=format&fit=crop&w=400&q=80" alt="Specialty Cake" class="img-fluid rounded mb-3" />
+            <img src="cake.jpg" alt="Specialty Cake" class="img-fluid rounded mb-3" />
             <h4>Gourmet Specialty Cake</h4>
             <p>A specialty cake with rich flavors and artistic decoration for unique celebrations.</p>
             <p class="fw-bold text-danger">$70 each</p>
