--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <header class="bg-dark text-white text-center p-4 mb-4">
         <h1 class="display-4 fw-bold">Sweet Sensations Bakery</h1>
         <p class="lead">Bringing love and flavor to every bite</p>
-       <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="cakes.html">Our Cakes</a></li>
-                   <li><a href="classes.html">Baking Classes</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="feedback.html"> Feedback</a></li>
-                </ul>
+       <nav>
+  <ul>
+    <li class="current"><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="cakes.html">Our Cakes</a></li>
+    <li><a href="classes.html">Baking Classes</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+    <li><a href="feedback.html">Feedback</a></li>
+  </ul>
+</nav>
+
     </header>
 
     <main class="container">
