--- a/index.html
+++ b/index.html
@@ -1,78 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sweet Sensations Bakery</title>
-    <!-- Bootstrap CSS -->
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-      crossorigin="anonymous" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Bakery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header class="bg-dark text-white text-center p-4 mb-4">
-        <h1 class="display-4 fw-bold">Sweet Sensations Bakery</h1>
-        <p class="lead">Bringing love and flavor to every bite</p>
-    </header>
+    <div class="container">
+        <!-- Navigation Bar -->
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#cakes">Our Cakes</a></li>
+                <li><a href="#baking-class">Baking Class</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#feedback">Feedback</a></li>
+            </ul>
+        </nav>
 
-    <main class="container">
-      <div class="row mb-5">
-        <div class="col-md-6">
-          <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=800&q=80" alt="Delicious cupcakes" class="img-fluid rounded shadow-sm" />
-        </div>
-        <div class="col-md-6 d-flex flex-column justify-content-center">
-          <h2>Welcome to Sweet Sensations</h2>
-          <p>At Sweet Sensations, baking is not just a craft, it’s a passion. Every cake, pastry, and sweet treat is created with love and the finest ingredients to bring joy to your taste buds. Our mission is to share the magic of our flavorful creations with the community.</p>
-          <p>From traditional recipes to innovative flavors, every bite is a delicious story waiting to delight you and your loved ones.</p>
-        </div>
-      </div>
+        <!-- Main Section -->
+        <main>
+            <section id="home">
+                <h1>Welcome to My Bakery!</h1>
+                <p>We specialize in delightful cakes that add sweetness to your celebrations.</p>
+            </section>
 
-      <section class="blog-section">
-        <h2 class="mb-4">Our Passion for Baking</h2>
-        <div class="row g-4">
-          <article class="col-md-6 col-lg-4">
-            <img 
-              src="https://images.unsplash.com/photo-1508747703727-1c368f7e6f4e?auto=format&fit=crop&w=600&q=80" 
-              alt="Baking ingredients" 
-              class="img-fluid rounded mb-3" />
-            <h3>Why We Bake</h3>
-            <p>There’s something magical in creating something from scratch, in measuring, mixing and waiting for the perfect rise. Baking allows us to express creativity while bringing comfort and joy to others.</p>
-          </article>
-          <article class="col-md-6 col-lg-4">
-            <img 
-              src="https://images.unsplash.com/photo-1612197526303-d0aa1a43eb57?auto=format&fit=crop&w=600&q=80" 
-              alt="Decorating cakes" 
-              class="img-fluid rounded mb-3" />
-            <h3>Crafting Tasteful Treats</h3>
-            <p>Every recipe is perfected to awaken your taste buds, blending traditional techniques with fresh, high-quality ingredients. Our commitment is to deliver indulgence that leaves a lasting impression.</p>
-          </article>
-          <article class="col-md-6 col-lg-4">
-            <img 
-              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?auto=format&fit=crop&w=600&q=80" 
-              alt="Home baked breads" 
-              class="img-fluid rounded mb-3" />
-            <h3>Sharing with Community</h3>
-            <p>We don’t just bake for ourselves – we bake to bring people together. Whether for celebrations or everyday moments, our treats aim to make life sweeter and bond us through shared flavor experiences.</p>
-          </article>
-        </div>
-      </section>
-    </main>
+            <section id="about">
+                <h2>About Us</h2>
+                <p>Our bakery has been creating delicious treats for over 10 years, using the finest ingredients.</p>
+            </section>
 
-    <footer class="bg-dark text-white text-center py-3 mt-5">
-      <p class="mb-0">&copy; 2024 Sweet Sensations Bakery. All rights reserved.</p>
-    </footer>
+            <section id="cakes">
+                <h2>Our Cakes</h2>
+                <p>Explore our range of exquisite cakes made for all occasions.</p>
+                <img src="cake1.jpg" alt="Wedding Cake" />
+                <img src="cake2.jpg" alt="Birthday Cake" />
+            </section>
 
-    <!-- Bootstrap JS Bundle with Popper (optional, for functionality like dropdowns) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
-      crossorigin="anonymous"></script>
+            <section id="baking-class">
+                <h2>Baking Class</h2>
+                <p>Join our baking class and learn to create your own delicious desserts!</p>
+            </section>
+
+            <section id="contact">
+                <h2>Contact Us</h2>
+                <p>Reach out to us for inquiries or special requests!</p>
+            </section>
+
+            <section id="feedback">
+                <h2>Feedback</h2>
+                <p>We value your feedback. Please let us know how we did!</p>
+            </section>
+        </main>
+
+        <!-- Footer -->
+        <footer>
+            <p>&copy; 2023 My Bakery. All rights reserved.</p>
+            <section>
+                <h3>Introduction to Our Website</h3>
+                <p>Welcome to our bakery website where you can discover our delicious treats!</p>
+            </section>
+        </footer>
+    </div>
 </body>
+
 </html>
-
-
-
- 
