--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <!-- Navigation Bar -->
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#cakes">Our Cakes</a></li>
-                <li><a href="#baking-class">Baking Class</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-                <li><a href="#feedback">Feedback</a></li>
+                <li><a href="#index.html">Home</a></li>
+                <li><a href="#about.html">About Us</a></li>
+                <li><a href="#cakes.html">Our Cakes</a></li>
+                <li><a href="#classes.html">Baking Class</a></li>
+                <li><a href="#contact.html">Contact Us</a></li>
+                <li><a href="#feedback.html">Feedback</a></li>
             </ul>
         </nav>
 
