--- a/Feedback.html
+++ b/Feedback.html
@@ -28,8 +28,10 @@
                             <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="products.html">Our Products</a>
+                            <a class="nav-link" href="cakes.html">Our Cakes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="classes.html">Bakery Classes</a>
                         <li class="nav-item">
                             <a class="nav-link active" href="feedback.html">Feedback</a>
                         </li>
