--- a/index.html
+++ b/index.html
@@ -11,17 +11,33 @@
 <body>
     <div class="container">
         <!-- Navigation Bar -->
-        <nav>
-            <ul>
-                <li><a href="#index.html">Home</a></li>
-                <li><a href="#about.html">About Us</a></li>
-                <li><a href="#cakes.html">Our Cakes</a></li>
-                <li><a href="#classes.html">Baking Class</a></li>
-                <li><a href="#contact.html">Contact Us</a></li>
-                <li><a href="#feedback.html">Feedback</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Sweet Sensations Bakery</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cakes.html">Our Cakes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="classes.html">Bakery Classes</a>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="feedback.html">Feedback</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-
+        
         <!-- Main Section -->
         <main>
             <section id="home">
