--- a/contact.html
+++ b/contact.html
@@ -15,30 +15,32 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<div class="container">
-<a class="navbar-brand" href="index.html">My Website</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
-<li class="nav-item">
-<a class="nav-link" href="index.html">Home`Page</a>
-</li>
-  <li class="nav-item">
-<a class="nav-link" href="menu.html">Menu</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="about.html">About Us</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="contact.html">Contact Us</a>
-</li>
-</ul>
-</div>
-</div>
-    </nav>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Sweet Sensations Bakery</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cakes.html">Our Cakes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="classes.html">Bakery Classes</a>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="feedback.html">Feedback</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     
   </header>
   <main>
