--- a/Feedback.html
+++ b/Feedback.html
@@ -7,6 +7,29 @@
     <title>Feedback - Artisan Bakery</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            // Collect values from the form
+            const firstName = document.getElementById('firstname').value;
+            const lastName = document.getElementById('lastname').value;
+            const gender = document.querySelector('input[name="gender"]:checked').value;
+            const rating = document.querySelector('select[name="rating"]').value;
+            const liked = document.getElementById('liked').value;
+            const improvement = document.getElementById('improvement').value;
+
+            // Display a confirmation message
+            alert(`Thank you for your feedback, ${firstName} ${lastName}!\n\n` +
+                  `Your Rating: ${rating}\n` +
+                  `What you liked: ${liked}\n` +
+                  `Suggestions: ${improvement}\n` +
+                  `Gender: ${gender}`);
+
+            // Optionally, you can reset the form
+            document.querySelector('form').reset();
+        }
+    </script>
 </head>
 
 <body>
@@ -32,6 +55,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="classes.html">Bakery Classes</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="feedback.html">Feedback</a>
                         </li>
@@ -44,7 +68,7 @@
     <!-- MAIN CONTENT -->
     <main class="container my-5">
         <h2 class="text-center mb-4">We Value Your Feedback!</h2>
-        <form action="thanks.html" method="get" class="p-4 border rounded shadow">
+        <form onsubmit="handleSubmit(event)" class="p-4 border rounded shadow">
 
             <!-- PERSONAL INFORMATION -->
             <fieldset class="mb-4">
@@ -114,4 +138,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
