--- a/classes.html
+++ b/classes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Baking Classes - Sweet Sensations Bakery</title>
+  <title>Baking Classes - Artisan Bakery</title>
   <link rel="stylesheet" href="style.css">
   <!-- Bootstrap CSS -->
   <link
@@ -74,7 +74,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Sweet Sensations</a>
+      <a class="navbar-brand fw-bold" href="index.html">Artisan bakery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -194,7 +194,7 @@
   </main>
 
   <footer class="bg-danger text-white text-center py-3 mt-5">
-    <p class="mb-0">&copy; 2024 Sweet Sensations Bakery. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS Bundle -->
