--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Our Cakes</h2>
                 <p>Explore our range of exquisite cakes made for all occasions.</p>
                 <img src="cake1.jpg" alt="Wedding Cake" />
-                <img src="cake2.jpg" alt="Birthday Cake" />
+                <img src="Happy birthday cake.htm" alt="Birthday Cake" />
             </section>
 
             <section id="baking-class">
