--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       <section class="mt-5">
         <h2>Our Passion & Drive</h2>
         <p>
-          At Sweet Sensations, our passion for baking is fueled by a desire to create joy and connection. Baking is more than mixing ingredients — it's crafting experiences and memories. We're driven to use only the freshest, high-quality ingredients and blend tradition with creativity to make each treat a masterpiece.
+          At Artisan Bakery, our passion for baking is fueled by a desire to create joy and connection. Baking is more than mixing ingredients — it's crafting experiences and memories. We're driven to use only the freshest, high-quality ingredients and blend tradition with creativity to make each treat a masterpiece.
         </p>
         <p>
           We believe everyone deserves a taste of our heartfelt creations — whether it’s a cake for a special occasion, a comforting pastry with your morning coffee, or simply a sweet treat to brighten your day.
@@ -56,7 +56,7 @@
   </main>
 
   <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">&copy; 2024 Sweet Sensations Bakery. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS Bundle with Popper -->
