--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="bg-dark text-white text-center p-4 mb-4">
-    <h1 class="display-4 fw-bold">About Sweet Sensations Bakery</h1>
+    <h1 class="display-4 fw-bold">About Artisan Bakery</h1>
     <p class="lead">A journey fueled by tradition, passion, and flavor</p>
   </header>
   <main class="container mb-5">
