--- a/cakes.html
+++ b/cakes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Treats & Cakes - Sweet Sensations Bakery</title>
+  <title>Treats & Cakes - Artisan Bakery</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
   <style>
@@ -45,7 +45,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Sweet Sensations</a>
+      <a class="navbar-brand fw-bold" href="index.html"> Artisan Bakery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -61,7 +61,7 @@
   </nav>
 
   <header class="bg-danger text-white text-center p-4 mb-4">
-    <h1 class="display-4 fw-bold">Sweet Sensations Bakery</h1>
+    <h1 class="display-4 fw-bold"> Artisan Bakery</h1>
     <p class="lead">Choose your favorite treats and cakes</p>
   </header>
 
