--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
 <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="styles.css" />
+   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <header class="bg-dark text-white text-center p-4 mb-4">
