--- a/about.html
+++ b/about.html
@@ -8,6 +8,26 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">Artisan bakery</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto fw-semibold">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#our-cakes-section">Our Cakes</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="classes.html">Baking Class</a></li>
+          <li class="nav-item"><a class="nav-link" href="land.html">Land</a></li>
+          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <header class="bg-dark text-white text-center p-4 mb-4">
     <h1 class="display-4 fw-bold">About Artisan Bakery</h1>
     <p class="lead">A journey fueled by tradition, passion, and flavor</p>
