--- a/Feedback.html
+++ b/Feedback.html
@@ -52,5 +52,99 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html"
-   
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cakes.html">Our Cakes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="classes.html">Bakery Classes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="feedback.html">Feedback</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- MAIN CONTENT -->
+  <main class="container my-5">
+    <h2 class="text-center mb-4">We Value Your Feedback!</h2>
+    <form id="feedbackForm" onsubmit="handleSubmit(event)" class="p-4 border rounded shadow">
+
+      <!-- PERSONAL INFORMATION -->
+      <fieldset class="mb-4">
+        <legend class="mb-3">Personal Information:</legend>
+        <div class="mb-3">
+          <label for="firstname" class="form-label">First Name:</label>
+          <input type="text" id="firstname" name="firstname" class="form-control" required />
+        </div>
+        <div class="mb-3">
+          <label for="lastname" class="form-label">Last Name:</label>
+          <input type="text" id="lastname" name="lastname" class="form-control" required />
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Gender:</label><br />
+          <input type="radio" name="gender" value="male" checked /> Male
+          <input type="radio" name="gender" value="female" class="ms-3" /> Female
+          <input type="radio" name="gender" value="other" class="ms-3" /> Other
+        </div>
+      </fieldset>
+
+      <!-- RATING -->
+      <fieldset class="mb-4">
+        <legend class="mb-3">Rate Your Experience:</legend>
+        <div class="mb-3">
+          <label class="form-label">Overall Experience:</label><br />
+          <select class="form-select" name="rating" required>
+            <option value="">Choose...</option>
+            <option value="1">1 - Poor</option>
+            <option value="2">2 - Fair</option>
+            <option value="3">3 - Good</option>
+            <option value="4">4 - Very Good</option>
+            <option value="5">5 - Excellent</option>
+          </select>
+        </div>
+      </fieldset>
+
+      <!-- FEEDBACK QUESTIONS -->
+      <fieldset class="mb-4">
+        <legend class="mb-3">Your Feedback:</legend>
+        <div class="mb-3">
+          <label for="liked" class="form-label">What did you like most about our bakery?</label>
+          <textarea id="liked" name="liked" class="form-control" rows="3"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="improvement" class="form-label">Suggestions for improvement:</label>
+          <textarea id="improvement" name="improvement" class="form-control" rows="3"></textarea>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" id="contactPermission" name="contactPermission" class="form-check-input" />
+          <label for="contactPermission" class="form-check-label">Can we contact you for further feedback?</label>
+        </div>
+      </fieldset>
+
+      <!-- BUTTONS -->
+      <div class="d-flex justify-content-between">
+        <button type="reset" class="btn btn-secondary">Reset</button>
+        <button type="submit" class="btn btn-primary">Submit Feedback</button>
+      </div>
+
+    </form>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <p>&copy; 2025 Sweet Sensations Bakery | All Rights Reserved</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+
