--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8" />
@@ -103,7 +103,7 @@
             <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="feedback.html">Feedback</a>
+            <a class="nav-link" href="Feedback.html">Feedback</a>
           </li>
         </ul>
       </div>
