--- a/Feedback.html
+++ b/Feedback.html
@@ -64,7 +64,7 @@
               <a class="nav-link" href="classes.html">Bakery Classes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="feedback.html">Feedback</a>
+              <a class="nav-link active" href="Feedback.html">Feedback</a>
             </li>
           </ul>
         </div>
