--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ nav.navbar .navbar-collapse {
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="feedback.html">Feedback</a>
+              <a class="nav-link" href="Feedback.html">Feedback</a>
             </li>
           </ul>
         </div>
